syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/a-korkin/shop/common";

message ItemId {
    int32 id = 1;
}

message Item {
    int32 id = 1;
    string title = 2;
    float price = 3;
    string category = 4;
}

message ItemDto {
    string title = 1;
    float price = 2;
    string category = 3;
}

message ItemList {
    repeated Item items = 1;
}

message PageParams {
    int32 page = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message Empty {}

message User {
    int32 id = 1;
    string last_name = 2;
    string first_name = 3;
}

message UserId {
    int32 id = 1;
}

message UserDto {
    string last_name = 1;
    string first_name = 2;
}

message PurchaseDto {
    int32 user_id = 1;
    int32 item_id = 2;
    int32 count_items = 3;
}

message Purchase {
    int32 id = 1;
    int32 user_id = 2;
    int32 item_id = 3;
    google.protobuf.Timestamp time_of_purchase = 4;
    int32 count_items = 5;
}

service ShopService {
    rpc GetItem(ItemId) returns (Item);
    rpc CreateItem(ItemDto) returns (Item);
    rpc GetItems(PageParams) returns (ItemList);
    rpc DropItem(ItemId) returns (Empty);
    rpc UpdItem(Item) returns (Item);

    rpc CreateUser(UserDto) returns (User);
    rpc UpdUser(User) returns (User);
    rpc GetUser(UserId) returns (User);
    rpc GetUsers(PageParams) returns (stream User);
    rpc DropUser(UserId) returns (Empty);

    rpc Buy(PurchaseDto) returns (Purchase);
}
